# git-point

./: .editorconfig  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  package.nix  shell.nix
src/: delegate.rs  main.rs
tests/: basic.rs  common.rs
