[package]
name = "git-point"
version = "0.2.2"
edition = "2021"
authors = ["Qyriad <qyriad@qyriad.me>"]
description = "Set arbitrary refs without shooting yourself in the foot, a porcelain `git update-ref`"
repository = "https://github.com/Qyriad/git-point"
readme = true
license = "MIT"
keywords = ["git", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
bstr = "1.10.0"
clap = { version = "4.5.20", features = ["wrap_help", "derive"] }
clap_mangen = "0.2.24"
env_logger = "0.11.5"
gix = { version = "0.70.0", features = ["revision"] }
log = { version = "0.4.22", features = ["std"] }
miette = { version = "7.2.0", features = ["fancy"] }
owo-colors = { version = "4.1.0", features = ["alloc", "supports-color", "supports-colors"] }
tap = "1.0.1"

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2.1"
